test/integration/good/code-gen/redcard.stan
data {
  int N;
  vector_cl[N] rating;
}