test/integration/bad/lang/bad9.stan
data {
   real y;
}
parameters {
   int N;
   array[N] real z;
}
model {
}
